# numenology

./: .gitignore  CMakeLists.txt  makefile  numerology.c  numerology.cpp  numerology.h  numerology.hpp  person.hpp  ut.c  ut.cpp  util.cpp  util.hpp
